--- a/src/app/add-buttons/add-buttons.component.html
+++ b/src/app/add-buttons/add-buttons.component.html
@@ -1,8 +1,8 @@
         <div class="mb-3 mt-3">
           <label for="fbtn">First Button </label>
-          <input type="text" class="form-control" id="fbtn" name="fbtn">
+          <input type="text" max="20" class="form-control">
         </div>
         <div class="mb-3">
           <label for="sbtn">Second Button</label>
-          <input type="text" class="form-control" id="sbtn" name="sbtn">
+          <input type="text" max="20" class="form-control">
         </div>
