--- a/src/app/add-story-subgroup/add-story-subgroup.component.html
+++ b/src/app/add-story-subgroup/add-story-subgroup.component.html
@@ -1,16 +1,16 @@
 <div class="mb-3 mt-3">
     <label for="mytitle">Title </label>
-    <input type="text" class="form-control" id="mytitle" name="mytitle">
+    <input type="text" max="200" class="form-control">
   </div>
   <div class="mb-3">
     <label for="msg">Message</label>
-    <input type="text" class="form-control" id="msg" name="msg">
+    <input type="text" max="200" class="form-control">
   </div>
   <div class="mb-3">
     <label for="win">Win 1st</label>
-    <input type="text" class="form-control" id="win" name="win">
+    <input type="text" max="200" class="form-control">
   </div>
   <div class="mb-3">
     <label for="wins">Win 2nd</label>
-    <input type="text" class="form-control" id="wins" name="wins">
+    <input type="text" max="200" class="form-control">
   </div>
