--- a/src/app/add-story/add-story.component.html
+++ b/src/app/add-story/add-story.component.html
@@ -1,18 +1,17 @@
 <div class="row">
     <div class="col-sm-12">
-      <form action="/action_page.php">
         <h1>Internal Info</h1>
         <div class="mb-3 mt-3">
           <label for="qname">Internal Quest Name </label>
-          <input type="text" class="form-control" id="qname" name="qname">
+          <input type="text" max="20" class="form-control" [(ngModel)]="storyForm.questName">
         </div>
         <div class="mb-3">
           <label for="qdesc">Internal Quest Description</label>
-          <input type="text" class="form-control" id="qdesc" name="qdesc">
+          <input type="text" max="200" class="form-control" [(ngModel)]="storyForm.questDesc">
         </div>
         <div class="mb-3">
           <label for="pawd">Points Awarded </label>
-          <input type="text" class="form-control" id="pawd" name="pawd">
+          <input type="number" maxlength="10" value="10" class="form-control" [(ngModel)]="storyForm.points">
         </div>
         <h1>General Story</h1>
         <app-add-story-subgroup></app-add-story-subgroup>
@@ -30,7 +29,7 @@
         <app-add-buttons></app-add-buttons>
         <h1>Union</h1>
         <app-add-buttons></app-add-buttons>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+        <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
+
     </div>
   </div>
