--- a/src/app/add-story/add-story.component.html
+++ b/src/app/add-story/add-story.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-sm-12">
-        <h1>Internal Info</h1>
+        <h1><u>INTERNAL INFO</u></h1>
         <div class="mb-3 mt-3">
           <label for="qname">Internal Quest Name </label>
           <input type="text" max="20" class="form-control" [(ngModel)]="storyForm.questName">
@@ -13,21 +13,21 @@
           <label for="pawd">Points Awarded </label>
           <input type="number" maxlength="10" value="10" class="form-control" [(ngModel)]="storyForm.points">
         </div>
-        <h1>General Story</h1>
+        <h1><u>GENERAL STORY</u></h1>
         <app-add-story-subgroup></app-add-story-subgroup>
-        <h1>Empire Story</h1>
+        <h1><u>EMPIRE STORY</u></h1>
         <app-add-story-subgroup></app-add-story-subgroup>
-        <h1>Federation Story</h1>
+        <h1><u>FEDERATION STORY</u></h1>
         <app-add-story-subgroup></app-add-story-subgroup>
-        <h1>Union Story</h1>
+        <h1><u>UNION STORY</u></h1>
         <app-add-story-subgroup></app-add-story-subgroup>
-        <h1>Conclusion Story</h1>
+        <h1><u>CONCLUSION STORY</u></h1>
         <app-add-story-subgroup></app-add-story-subgroup>
-        <h1>Empire</h1>
+        <h1><u>EMPIRE</u></h1>
         <app-add-buttons></app-add-buttons>
-        <h1>Federation</h1>
+        <h1><u>FEDERATION</u></h1>
         <app-add-buttons></app-add-buttons>
-        <h1>Union</h1>
+        <h1><u>Union</u></h1>
         <app-add-buttons></app-add-buttons>
         <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
 
