--- a/src/app/add-story/add-story.component.html
+++ b/src/app/add-story/add-story.component.html
@@ -27,7 +27,7 @@
         <app-add-buttons></app-add-buttons>
         <h1><u>FEDERATION</u></h1>
         <app-add-buttons></app-add-buttons>
-        <h1><u>Union</u></h1>
+        <h1><u>UNION</u></h1>
         <app-add-buttons></app-add-buttons>
         <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
 
