--- a/src/app/add-story-subgroup/add-story-subgroup.component.html
+++ b/src/app/add-story-subgroup/add-story-subgroup.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="mb-3">
     <label for="msg">Message</label>
-    <input type="text" max="200" class="form-control">
+    <textarea class="form-control" rows="5" id="comment"></textarea>
   </div>
   <div class="mb-3">
     <label for="win">Win 1st</label>
