--- a/src/app/add-story/add-story.component.html
+++ b/src/app/add-story/add-story.component.html
@@ -1,35 +1,41 @@
-<div class="row">
-    <div class="col-sm-12">
-        <h1><u>INTERNAL INFO</u></h1>
-        <div class="mb-3 mt-3">
-          <label for="qname">Internal Quest Name </label>
-          <input type="text" max="20" class="form-control" [(ngModel)]="storyForm.questName">
-        </div>
-        <div class="mb-3">
-          <label for="qdesc">Internal Quest Description</label>
-          <input type="text" max="200" class="form-control" [(ngModel)]="storyForm.questDesc">
-        </div>
-        <div class="mb-3">
-          <label for="pawd">Points Awarded </label>
-          <input type="number" maxlength="10" value="10" class="form-control" [(ngModel)]="storyForm.points">
-        </div>
-        <h1><u>GENERAL STORY</u></h1>
-        <app-add-story-subgroup></app-add-story-subgroup>
-        <h1><u>EMPIRE STORY</u></h1>
-        <app-add-story-subgroup></app-add-story-subgroup>
-        <h1><u>FEDERATION STORY</u></h1>
-        <app-add-story-subgroup></app-add-story-subgroup>
-        <h1><u>UNION STORY</u></h1>
-        <app-add-story-subgroup></app-add-story-subgroup>
-        <h1><u>CONCLUSION STORY</u></h1>
-        <app-add-story-subgroup></app-add-story-subgroup>
-        <h1><u>EMPIRE</u></h1>
-        <app-add-buttons></app-add-buttons>
-        <h1><u>FEDERATION</u></h1>
-        <app-add-buttons></app-add-buttons>
-        <h1><u>UNION</u></h1>
-        <app-add-buttons></app-add-buttons>
-        <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
 
-    </div>
-  </div>
+        
+        <div class="row">
+            <div class="col-sm-3"></div>
+            <div class="col-sm-6">
+                <h1 class="ininfo"><u><b>INTERNAL INFO</b></u></h1>
+                <div class="mb-3 mt-3">
+                    <label for="qname">Internal Quest Name </label>
+                    <input type="text" max="20" class="form-control" [(ngModel)]="storyForm.questName">
+                  </div>
+                  <div class="mb-3">
+                    <label for="qdesc">Internal Quest Description</label>
+                    <input type="text" max="200" class="form-control" [(ngModel)]="storyForm.questDesc">
+                  </div>
+                  <div class="mb-3">
+                    <label for="pawd">Points Awarded </label>
+                    <input type="number" maxlength="10" value="10" class="form-control" [(ngModel)]="storyForm.points">
+                  </div>
+                  <h1 class="ininfo"><u><b>STORY LINE</b></u></h1>
+                  <h1><u>GENERAL STORY</u></h1>
+                  <app-add-story-subgroup></app-add-story-subgroup>
+                  <h1><u>EMPIRE STORY</u></h1>
+                  <app-add-story-subgroup></app-add-story-subgroup>
+                  <h1><u>FEDERATION STORY</u></h1>
+                  <app-add-story-subgroup></app-add-story-subgroup>
+                  <h1><u>UNION STORY</u></h1>
+                  <app-add-story-subgroup></app-add-story-subgroup>
+                  <h1><u>CONCLUSION STORY</u></h1>
+                  <app-add-story-subgroup></app-add-story-subgroup>
+                  <h1 class="ininfo"><u>BUTTONS</u></h1>
+                  <h1><u>EMPIRE</u></h1>
+                  <app-add-buttons></app-add-buttons>
+                  <h1><u>FEDERATION</u></h1>
+                  <app-add-buttons></app-add-buttons>
+                  <h1><u>UNION</u></h1>
+                  <app-add-buttons></app-add-buttons>
+                  <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
+            </div>
+        </div>
+    
+  
