--- a/src/app/add-story/add-story.component.html
+++ b/src/app/add-story/add-story.component.html
@@ -27,7 +27,7 @@
                   <app-add-story-subgroup></app-add-story-subgroup>
                   <h1><u>CONCLUSION STORY</u></h1>
                   <app-add-story-subgroup></app-add-story-subgroup>
-                  <h1 class="ininfo"><u>BUTTONS</u></h1>
+                  <h1 class="ininfo"><u><b>BUTTONS</b></u></h1>
                   <h1><u>EMPIRE</u></h1>
                   <app-add-buttons></app-add-buttons>
                   <h1><u>FEDERATION</u></h1>
